--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,9 +60,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+
+  assets:
+     - assets/images/FrostOgre_icon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -75,11 +75,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: Nordic
+      fonts:
+         - asset: assets/fonts/Norse.otf
+           weight: 400
+         - asset: assets/fonts/NorseBold.otf
+           weight: 700
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
