--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ flutter:
 
   assets:
      - assets/images/FrostOgre_icon.png
+     - assets/images/GoldenJuggernaut_icon.png
+     - assets/data/bosses.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
