--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   bitsdojo_window: ^0.1.6
   window_manager: ^0.5.1
+  flutter_launcher_icons: ^0.14.4
 
 dev_dependencies:
   flutter_test:
@@ -79,6 +80,7 @@ flutter:
      - assets/images/void_ogre_icon.png
      - assets/data/bosses.json
      - assets/images/background.png
+     - assets/icon/icon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
